--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="A website showcasing projects developed by Dena Shams"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,8 +20,8 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>Dena Shams</title>
     <link rel="stylesheet" href="/style.css" />
+    <title>Dena Shams Homepage</title>
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-lg bg-light">
@@ -53,13 +57,24 @@
     <h1>Dena Shams</h1>
     <h3>Front-end developer, based in Iran</h3>
     <div class="navigation-links">
-      <a href="/about.html#contact" class="contact-link">Contact me</a>
-      <a href="/about.html" class="about-link">About me</a>
+      <a
+        title="Go to contact section"
+        href="/about.html#contact"
+        class="contact-link"
+        >Contact me</a
+      >
+      <a title="Go to about page" href="/about.html" class="about-link"
+        >About me</a
+      >
     </div>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <img src="/images/yoga.png" class="img-fluid rounded" />
+          <img
+            src="/images/yoga.png"
+            alt="yoga site screenshot"
+            class="img-fluid rounded"
+          />
         </div>
         <div class="col-md-6">
           <h2 class="text-start mb-3 mt-4">Yoga App</h2>
@@ -70,12 +85,14 @@
             explicabo eum dolore.
           </p>
           <br />
-          <a href="#" class="launch-link">Launch Yoga App</a>
+          <a title="Go to Yoga App" href="#" class="launch-link"
+            >Launch Yoga App</a
+          >
         </div>
       </div>
-      <div class="row mt-4">
+      <div class="row mt-4 mb-4">
         <div class="col-md-6">
-          <h2 class="text-start mb-3">Weather App</h2>
+          <h2 class="text-start mb-4">Weather App</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -83,15 +100,26 @@
             explicabo eum dolore.
           </p>
           <br />
-          <a href="#" class="launch-link">Launch Weather App</a>
+          <a title="Go to Weather App" href="#" class="launch-link"
+            >Launch Weather App</a
+          >
         </div>
+
         <div class="col-md-6">
-          <img src="/images/weather.png" class="img-fluid rounded" />
+          <img
+            src="/images/weather.png"
+            alt="weather site screenshot"
+            class="img-fluid rounded"
+          />
         </div>
       </div>
-      <div class="row mt-4">
+      <div class="row mt-4 mb-4">
         <div class="col-md-6">
-          <img src="/images/yogurt.png" class="img-fluid rounded" />
+          <img
+            src="/images/yogurt.png"
+            alt="yogurt site screenshot"
+            class="img-fluid rounded"
+          />
         </div>
         <div class="col-md-6">
           <h2 class="text-start mb-3">Yogurt App</h2>
@@ -102,7 +130,9 @@
             explicabo eum dolore.
           </p>
           <br />
-          <a href="#" class="launch-link">Launch Yogurt App</a>
+          <a title="Go to yogurt app" href="#" class="launch-link"
+            >Launch Yogurt App</a
+          >
         </div>
       </div>
     </div>
