--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-6">
           <img
             src="/images/yoga.png"
             alt="yoga site screenshot"
@@ -91,7 +91,7 @@
         </div>
       </div>
       <div class="row mt-4 mb-4">
-        <div class="col-md-6">
+        <div class="col-6">
           <h2 class="text-start mb-4">Weather App</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -105,7 +105,7 @@
           >
         </div>
 
-        <div class="col-md-6">
+        <div class="col-6">
           <img
             src="/images/weather.png"
             alt="weather site screenshot"
@@ -114,14 +114,14 @@
         </div>
       </div>
       <div class="row mt-4 mb-4">
-        <div class="col-md-6">
+        <div class="col-6">
           <img
             src="/images/yogurt.png"
             alt="yogurt site screenshot"
             class="img-fluid rounded"
           />
         </div>
-        <div class="col-md-6">
+        <div class="col-6">
           <h2 class="text-start mb-3">Yogurt App</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
